[package]
name = "first_example"
version = "0.1.0"
authors = ["Georgii Zhulikov <l8doku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"

# cgmath = { version = "0.17", features = ["mint"]}

rand = "0.3.14"